@@ -1,6 +1,8 @@
 package citalyser.networking;
 
 import citalyser.Config;
+import citalyser.Constants;
+import citalyser.Main;
 import citalyser.util.CProxy;
 import java.net.*;
 import java.io.*;
@@ -15,13 +17,10 @@ import java.util.logging.*;
 public class HttpConnection {
 
     private static org.apache.log4j.Logger logger = org.apache.log4j.Logger.getLogger(HttpConnection.class.getName());
-    //@constants 
-    private static int SERVER_READOUT_TIME = 15000;
+    //@constants
     
     //@variables
     private static HttpURLConnection connection;
-    private static ArrayList<String> hostnames = new ArrayList<String>();
-    private static ArrayList<String> agents = new ArrayList<String>();
     
     /**
      * 
@@ -33,16 +32,20 @@ public class HttpConnection {
      * @throws IOException 
      *              thrown if any I/O error occurred
      */
-    public static void connectUrl(String requestURL, String hostname, String agentname)
-        throws IOException {
-        logger.debug("Hostname : " + hostname);
-        URL url = new URL(requestURL);
-        Proxy proxy = new Proxy(Proxy.Type.HTTP, new InetSocketAddress(hostname,8080));
-        connection = (HttpURLConnection) url.openConnection(proxy); 
-        connection.setInstanceFollowRedirects(true);
+    public static void connectUrl(String requestURL,CProxy cproxy,String agentname)
+        throws IOException, URISyntaxException {
+        URL url = new URI(requestURL).toURL();
+        Proxy proxy;
+        if(!cproxy.getnoProxy())
+            proxy = new Proxy(Proxy.Type.HTTP, 
+                                new InetSocketAddress(cproxy.getHostName(),cproxy.getPort()));
+        else
+            proxy = Proxy.NO_PROXY;
+        connection = (HttpURLConnection) (url.openConnection(proxy)); 
+        //connection.setInstanceFollowRedirects(true);
         connection.setDoInput(true);
         connection.setDoOutput(false);
-        connection.setReadTimeout(SERVER_READOUT_TIME);
+        connection.setConnectTimeout(Constants.SERVER_READOUT_TIME);
         connection.setRequestMethod("GET");
         connection.setRequestProperty("Content-Type", "text/html; charset=ISO-8859-1");
         connection.setRequestProperty("User-Agent", agentname);        
@@ -56,83 +59,54 @@ public class HttpConnection {
     public static String getUrlText(String url) {
         
         logger.info("Getting URL Text for : " + url);
+        int responseCode = 0;
         StringBuffer urlResponse = null;
         
         //Get proxies from file and add them
-        List proxies = Config.getProxylist();
+        List<CProxy> proxies = Config.getProxylist();
+        if(proxies == null)
+        {
+            proxies = new ArrayList<CProxy>();
+            proxies.add(new CProxy());
+        }
         logger.debug("No of Proxies : " + proxies.size());
-        if(!proxies.isEmpty()) {
-            for(int i = 0;i<proxies.size();i++)
+        for(int i = 0;i<proxies.size(); i++)
+        {
+            for(int j = 0;j<Constants.userAgents.length; j++)
             {
-                CProxy cproxy = (CProxy) proxies.get(i);
-                hostnames.add(cproxy.getHostName());
-            }
-//            Iterator proxyIterator = proxies.iterator();
-//            while (proxyIterator.hasNext()) {
-//                hostnames.add(proxyIterator.next());
-        //}
-        }
-        
-        if(agents.isEmpty()) {
-            agents.add("Mozilla/5.0 (Windows; U; Windows NT 6.1; rv:2.2) Gecko/20110201");
-            agents.add("Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.17 (KHTML, like Gecko) Chrome/24.0.1312.60 Safari/537.17");
-            agents.add("Mozilla/5.0 (iPad; CPU OS 6_0 like Mac OS X) AppleWebKit/536.26 (KHTML, like Gecko) Version/6.0 Mobile/10A5355d Safari/8536.25");
-            agents.add("Mozilla/5.0 (Macintosh; Intel Mac OS X 10_6_8) AppleWebKit/537.13+ (KHTML, like Gecko) Version/5.1.7 Safari/534.57.2");
-            agents.add("Mozilla/5.0 (Macintosh; Intel Mac OS X 10_7_3) AppleWebKit/534.55.3 (KHTML, like Gecko) Version/5.1.3 Safari/534.53.10");
-            agents.add("Mozilla/5.0 (iPad; CPU OS 5_1 like Mac OS X) AppleWebKit/534.46 (KHTML, like Gecko ) Version/5.1 Mobile/9B176 Safari/7534.48.3");
-            agents.add("Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10_6_8; de-at) AppleWebKit/533.21.1 (KHTML, like Gecko) Version/5.0.5 Safari/533.21.1");
-            agents.add("Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10_6_7; da-dk) AppleWebKit/533.21.1 (KHTML, like Gecko) Version/5.0.5 Safari/533.21.1");
-            agents.add("Mozilla/5.0 (Windows; U; Windows NT 6.1; tr-TR) AppleWebKit/533.20.25 (KHTML, like Gecko) Version/5.0.4 Safari/533.20.27");
-            agents.add("Opera/9.80 (Windows NT 6.0) Presto/2.12.388 Version/12.14");
-            agents.add("Mozilla/5.0 (Windows NT 6.0; rv:2.0) Gecko/20100101 Firefox/4.0 Opera 12.14");
-            agents.add("Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.0) Opera 12.14");
-            agents.add("Opera/12.80 (Windows NT 5.1; U; en) Presto/2.10.289 Version/12.02");
-        }
-        
-        String hostname;
-        try {
-             
-            /* Check for errors in response codes*/
-            int responseCode = 0;
-            
-            while(responseCode != 200)
-            {
-                if(!hostnames.isEmpty()){
-                    hostname = hostnames.remove(0);
-                    
-                    for(int j=0; j< agents.size() ; j++) 
+                logger.debug("Proxy : " + proxies.get(i).toString() +" UserAgent : "+Constants.userAgents[j]);
+                try{
+                    connectUrl(url,proxies.get(i),Constants.userAgents[j]);
+                    responseCode = connection.getResponseCode();
+                    if(responseCode == Constants.OK_Response_Code)
                     {
-                        System.out.println(hostname + " - " + agents.get(j));
-                        //System.out.println();
-                        connectUrl(url,hostname,agents.get(j));
-                        responseCode = connection.getResponseCode();
-                        //logger.debug("Proxy : " + hostname + "response = "+responseCode);
-                        if(responseCode== 200) break;
-                        else 
-                        {
-                            hostnames.add(hostname);
+                        /* Saving the html content */
+                        DataInputStream response = new DataInputStream(connection.getInputStream());
+                        BufferedReader reader = new BufferedReader(new InputStreamReader(response));
+                        urlResponse= new StringBuffer();
+                        String line;
+                        while ((line = reader.readLine()) != null){
+                            urlResponse.append(line);
                         }
+                        return urlResponse.toString();
                     }
-                    if(responseCode == 200)
-                        hostnames.add(0,hostname);
-                     //Config.setProxyList((List)hostnames);
-                    
+                }catch(ConnectException | UnknownHostException ex){
+                    //ex.printStackTrace();
+                    logger.error("Proxy : " + proxies.get(i) + " not working");
+                    break;
+                }catch(SocketTimeoutException ex){
+                    logger.error("Connection Timeout Connecting to  : " + proxies.get(i).toString());
+                    break;
+                }
+                catch(Exception ex){
+                    ex.printStackTrace();
+                    logger.error("Error fetching content : " + ex.getMessage());
                 }
             }
-            
-            /* Saving the html content */
-            DataInputStream response = new DataInputStream(connection.getInputStream());
-            BufferedReader reader = new BufferedReader(new InputStreamReader(response));
-            urlResponse= new StringBuffer();
-            String line;
-            while ((line = reader.readLine()) != null){
-                urlResponse.append(line);
-            }
         }
-        catch (IOException ex) {
-            Logger.getLogger(HttpConnection.class.getName()).log(Level.SEVERE, null, ex);
-        }
-        return urlResponse.toString();
+        logger.error("We could not connect to Google Scholar from any of the Proxies. "
+                    + "Please check your ProxyList or Try again Later.");
+        return null;
     }
     
     /**
